# MSP

./: CMakeLists.txt
src/msp/communication/: mspcommunicator.cpp  mspcommunicator.h
src/msp/communication/iface/: absinterface.cpp  absinterface.h  crc8_dvb_s2.cpp  crc8_dvb_s2.h  tcpiface.cpp  tcpiface.h
src/msp/messages/: base.h  custom_battery.h  motor.h  raw_rc.h  reboot.h  servo.h  sim.h
src/msp/test/: test_tcp.cpp  test_tcp_th.cpp
